--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="style.css">
   <meta name="google-site-verification" content="zkM7gtvqW5ysz0VwJcn1NSP8lqcpCE5SgQp3sdMoAUM" />
 </head>
+  <meta name="google-site-verification" content="zkM7gtvqW5ysz0VwJcn1NSP8lqcpCE5SgQp3sdMoAUM" />
 <body>
   <header>
     <h1>桃園會館接待員誠徵中！</h1>
