--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>桃園會館接待員徵才｜jan娛樂傳播經紀公司</title>
   <meta name="description" content="桃園會館誠徵接待員，提供優質工作環境與便利交通，立即加入jan娛樂傳播經紀公司，私訊Line 0916137331了解詳情！">
-  <meta name="keywords" content="桃園會館, 會館接待員, 桃園徵才, jan娛樂傳播, 桃園工作, 接待工作">
+  <meta name="keywords" content="桃園會館, 會館接待員, 桃園徵才, jan娛樂傳播, 桃園工作, 接待工作,高薪工作,八大行業">
   <meta name="author" content="jan娛樂傳播經紀公司">
   <meta name="google-site-verification" content="zkM7gtvqW5ysz0VwJcn1NSP8lqcpCE5SgQp3sdMoAUM" />
   <link rel="stylesheet" href="style.css">
