--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>桃園會館接待員徵才｜jan娛樂傳播經紀公司</title>
-  <meta name="description" content="桃園會館誠徵接待員，提供優質工作環境與便利交通，立即加入jan娛樂傳播經紀公司，私訊Line 0916137331了解詳情！">
+  <meta name="description" content="桃園TV音樂會館誠徵接待員，提供開心無壓力的工作環境，便利交通(近桃園火車站)，立即加入jan娛樂傳播經紀公司，私訊Line 0916137331了解詳情！">
   <meta name="keywords" content="桃園會館, 會館接待員, 桃園徵才, jan娛樂傳播, 桃園工作, 接待工作,高薪工作,八大行業">
   <meta name="author" content="jan娛樂傳播經紀公司">
   <meta name="google-site-verification" content="zkM7gtvqW5ysz0VwJcn1NSP8lqcpCE5SgQp3sdMoAUM" />
@@ -14,22 +14,22 @@
 <body>
   <header>
     <h1>桃園會館接待員誠徵中！</h1>
-    <p>加入 jan娛樂傳播經紀公司，環境優質、交通便利</p>
+    <p>加入 jan娛樂傳播經紀公司，開心無壓力的工作環境、便利交通(近桃園火車站)</p>
     <p>聯絡我們：<a href="https://line.me/ti/p/~0916137331">Line: 0916137331</a></p>
   </header>
 
   <section id="about">
     <h2>關於我們</h2>
-    <p>jan娛樂傳播經紀公司位於桃園，致力於打造高品質的娛樂會館服務。我們提供專業管理、溫馨職場與穩定收入。</p>
+    <p>jan娛樂傳播經紀公司位於桃園，致力於打造高品質的娛樂會館服務，提供彈性的時間安排與日領薪水的職缺。我們提供專業的保母照顧、溫馨的相處環境與高薪收入。</p>
   </section>
 
   <section id="jobs">
     <h2>職缺介紹</h2>
     <p>徵求：會館接待員</p>
     <ul>
-      <li>工作內容：負責客戶接待、簡易環境維護、協助現場運作</li>
+      <li>工作內容：負責接待客人、簡易環境維護、影陪、聊天談心、喝喝茶水果汁</li>
       <li>地點：桃園區近統領百貨</li>
-      <li>條件：親切有禮貌、具服務熱誠，無經驗可</li>
+      <li>條件：可愛活潑的你(需成年唷)、具一顆想賺錢 為自己努力一把的心，無經驗可</li>
     </ul>
   </section>
 
@@ -40,7 +40,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 jan娛樂傳播經紀公司. All Rights Reserved.</p>
+    <p>&copy; 2024 jan娛樂傳播經紀公司. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
