--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
   <header>
-    <h1>桃園會館接待員誠徵中！</h1>
-    <p>加入 jan娛樂傳播經紀公司，開心無壓力的工作環境、便利交通(近桃園火車站)</p>
-    <p>聯絡我們：<a href="https://line.me/ti/p/~0916137331">Line: 0916137331</a></p>
+    <h1>桃園tv時尚會館接待員擴大招募中！</h1>
+    <p>歡迎加入jan娛樂傳播經紀公司，提供一個開心無壓力的兼差環境、便利交通(近桃園火車站)</p>
+    <p>聯絡我們：<a href="https://line.me/ti/p/~wtf890209">Line: 0916137331</a></p>
   </header>
 
   <section id="about">
@@ -35,7 +35,7 @@
 
   <section id="contact">
     <h2>聯絡我們</h2>
-    <p>有興趣請加Line私訊洽詢：<a href="https://line.me/ti/p/~0916137331">0916137331</a></p>
+    <p>有興趣請加Line私訊洽詢：<a href="https://line.me/ti/p/~wtf890209">0916137331</a></p>
     <p>Email: <a href="mailto:zaq159420@gmail.com">zaq159420@gmail.com</a></p>
   </section>
 
