--- a/index.html
+++ b/index.html
@@ -1,46 +1,207 @@
-
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>桃園會館接待員徵才｜jan娛樂傳播經紀公司</title>
-  <meta name="description" content="桃園TV音樂會館誠徵接待員，提供開心無壓力的工作環境，便利交通(近桃園火車站)，立即加入jan娛樂傳播經紀公司，私訊Line 0916137331了解詳情！">
-  <meta name="keywords" content="桃園會館, 會館接待員, 桃園徵才, jan娛樂傳播, 桃園工作, 接待工作,高薪工作,八大行業">
-  <meta name="author" content="jan娛樂傳播經紀公司">
-  <meta name="google-site-verification" content="zkM7gtvqW5ysz0VwJcn1NSP8lqcpCE5SgQp3sdMoAUM" />
-  <link rel="stylesheet" href="style.css">
+  <title>桃園會館接待員徵才｜影時尚娛樂傳播經紀公司</title>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      font-family: 'Noto Sans TC', 'Poppins', sans-serif;
+      color: #fff;
+      line-height: 1.6;
+      height: 100%;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
+    }
+    /* 背景粒子 */
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+    header {
+      text-align: center;
+      padding: 3rem 1rem 2rem;
+    }
+    header h1 {
+      font-size: clamp(1.8rem, 5vw, 2.8rem);
+      background: linear-gradient(90deg, #ff00cc, #3333ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: 700;
+      margin: 0;
+    }
+    header p {
+      font-size: clamp(1rem, 3.5vw, 1.3rem);
+      margin-top: 1rem;
+    }
+    section {
+      max-width: 900px;
+      margin: 1.5rem auto;
+      padding: 1.8rem;
+      border-radius: 1rem;
+      background: rgba(255, 255, 255, 0.07);
+      backdrop-filter: blur(12px);
+    }
+    h2 {
+      font-size: clamp(1.4rem, 4vw, 1.8rem);
+      margin-bottom: 1rem;
+      border-left: 5px solid #ff33cc;
+      padding-left: 0.5rem;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    ul li {
+      margin: 0.6rem 0;
+      font-size: clamp(1rem, 3.5vw, 1.1rem);
+    }
+    .btn {
+      display: inline-block;
+      padding: 0.8rem 1.5rem;
+      margin-top: 1.2rem;
+      font-size: 1.1rem;
+      font-weight: 600;
+      color: #fff;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 2rem;
+      background: linear-gradient(90deg, #ff00cc, #3333ff);
+      transition: 0.3s ease;
+    }
+    .btn:hover {
+      box-shadow: 0 0 15px #ff33cc, 0 0 30px #3333ff;
+      transform: translateY(-3px);
+    }
+    footer {
+      text-align: center;
+      padding: 2rem 1rem 5rem;
+      font-size: 0.9rem;
+      color: #bbb;
+    }
+    /* 手機版固定 CTA */
+    .floating-cta {
+      position: fixed;
+      bottom: 15px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90%;
+      text-align: center;
+      z-index: 1000;
+    }
+    .floating-cta a {
+      display: block;
+      padding: 1rem;
+      font-size: 1.1rem;
+      border-radius: 2rem;
+      background: linear-gradient(90deg, #ff00cc, #3333ff);
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      box-shadow: 0 0 10px rgba(255, 0, 204, 0.5);
+    }
+    .floating-cta a:hover {
+      box-shadow: 0 0 20px #ff33cc, 0 0 35px #3333ff;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>桃園tv時尚會館接待員擴大招募中！</h1>
-    <p>歡迎加入jan娛樂傳播經紀公司，提供一個開心無壓力的兼差環境、便利交通(近桃園火車站)</p>
-    <p>聯絡我們：<a href="https://line.me/ti/p/~wtf890209">Line: 0916137331</a></p>
+  <!-- 粒子背景 -->
+  <div id="particles-js"></div>
+
+  <header data-aos="fade-down">
+    <h1>✨ 學生＆小資女首選 ✨</h1>
+    <p>零經驗可｜日領｜彈性排班｜安全有保障</p>
+    <a href="https://line.me/ti/p/~wtf890209" class="btn">📲 立即加Line洽詢</a>
   </header>
 
-  <section id="about">
-    <h2>關於我們</h2>
-    <p>jan娛樂傳播經紀公司位於桃園，致力於打造高品質的娛樂會館服務，提供彈性的時間安排與日領薪水的職缺。我們提供專業的保母照顧、溫馨的相處環境與高薪收入。</p>
-  </section>
-
-  <section id="jobs">
-    <h2>職缺介紹</h2>
-    <p>徵求：會館接待員</p>
+  <section id="why" data-aos="fade-up">
+    <h2>🌟 為什麼適合妳？</h2>
     <ul>
-      <li>工作內容：負責接待客人、簡易環境維護、影陪、聊天談心、喝喝茶水果汁</li>
-      <li>地點：桃園區近統領百貨</li>
-      <li>條件：可愛活潑的你(需成年唷)、具一顆想賺錢 為自己努力一把的心，無經驗可</li>
+      <li>💸 日領薪水，今天上班今天有錢</li>
+      <li>📅 彈性時間，下課或假日都能排</li>
+      <li>🫶 零經驗OK，現場專人會帶著妳</li>
+      <li>🌸 輕鬆氛圍，就像跟朋友聊天唱歌一樣輕鬆</li>
+      <li>🚉 超便利，桃園火車站走路就到</li>
     </ul>
   </section>
 
-  <section id="contact">
-    <h2>聯絡我們</h2>
-    <p>有興趣請加Line私訊洽詢：<a href="https://line.me/ti/p/~wtf890209">0916137331</a></p>
-    <p>Email: <a href="mailto:zaq159420@gmail.com">zaq159420@gmail.com</a></p>
+  <section id="jobs" data-aos="fade-up">
+    <h2>💼 工作內容</h2>
+    <ul>
+      <li>✨ 貼心接待客人</li>
+      <li>✨ 陪客人聊天、影視陪伴、唱歌</li>
+      <li>✨ 營造輕鬆氛圍</li>
+    </ul>
+  </section>
+
+  <section id="contact" data-aos="fade-up">
+    <h2>📱 聯絡我們</h2>
+    <p>Line：<a href="https://line.me/ti/p/~wtf890209" class="btn">0916-137-331</a></p>
+    <p>Email：<a href="mailto:zaq159420@gmail.com">zaq159420@gmail.com</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2024 jan娛樂傳播經紀公司. All Rights Reserved.</p>
+    <p>&copy; 影時尚娛樂傳播經紀公司 ｜ 妳的努力，值得更好的回報</p>
   </footer>
+
+  <!-- 手機版固定 CTA -->
+  <div class="floating-cta">
+    <a href="https://line.me/ti/p/~wtf890209">📲 點我加Line，馬上聊聊！</a>
+  </div>
+
+  <!-- 動畫效果 -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 1000,
+      once: true
+    });
+  </script>
+
+  <!-- 粒子特效 -->
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script>
+    particlesJS("particles-js", {
+      "particles": {
+        "number": { "value": 85 },
+        "color": { "value": ["#ff00cc", "#3333ff", "#ffffff"] },
+        "shape": { "type": "circle" },
+        "opacity": { "value": 0.6 },
+        "size": { "value": 3 },
+        "line_linked": {
+          "enable": true,
+          "distance": 120,
+          "color": "#ffffff",
+          "opacity": 0.3,
+          "width": 1
+        },
+        "move": {
+          "enable": true,
+          "speed": 1.8,
+          "direction": "none",
+          "random": true,
+          "out_mode": "out"
+        }
+      },
+      "interactivity": {
+        "events": {
+          "onhover": { "enable": true, "mode": "repulse" }
+        }
+      },
+      "retina_detect": true
+    });
+  </script>
 </body>
 </html>
+
